# AutoAid

./: .gitignore  README.md  app.py  appspec.yml  autoaid.service  package-lock.json  package.json  pyproject.toml  tailwind.config.js
autoAidModules/: sample_res.py  search_funcs.py
scripts/: install_dependencies.sh  start_application.sh  stop_application.sh
src/: main.css
static/: main.css
templates/: index.html  progress.html  tasks.html  vehicles_list.html
