[tool.poetry]
name = "autoaid"
version = "0.1.0"
description = ""
authors = ["Navan Chauhan <navanchauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
boilerpy3 = "^1.0.6"
rich = "^13.6.0"
click = "^8.1.7"
uvicorn = "^0.23.2"
jsbeautifier = "^1.14.9"
google-search-results = "^2.4.2"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
